--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}{{ site.css-url }}/main.css">
 </head>
 <body>
+  <div class="wrap">
   {{ content }}
+  </div>
 </body>
 </html>
