--- a/css/main.css
+++ b/css/main.css
@@ -3,28 +3,65 @@ Slate Theme for GitHub Pages
 by Jason Costello, @jsncostello
 *******************************************************************************/
 
-@import url(normalize.css);
 @import url(pygment_trac.css);
+
+/*******************************************************************************
+MeyerWeb Reset
+*******************************************************************************/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
 /*******************************************************************************
 Theme Styles
 *******************************************************************************/
 
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 body {
+  box-sizing: border-box;
   color:#373737;
-  background: #212121;
-  font-size: 18px;
+  background: #f5f5f5;
+  font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
 
+.wrap {
+    max-width:640px;
+    margin:10px auto;
+}
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
@@ -61,7 +98,6 @@ h6 {
 }
 
 p {
-  font-size: 18px;
   margin: 10px 0 15px 0;
 }
 
@@ -73,6 +109,17 @@ a {
   text-decoration: none;
   color: #007edf;
   text-shadow: none;
+
+  transition: color 0.5s ease;
+  transition: text-shadow 0.5s ease;
+  -webkit-transition: color 0.5s ease;
+  -webkit-transition: text-shadow 0.5s ease;
+  -moz-transition: color 0.5s ease;
+  -moz-transition: text-shadow 0.5s ease;
+  -o-transition: color 0.5s ease;
+  -o-transition: text-shadow 0.5s ease;
+  -ms-transition: color 0.5s ease;
+  -ms-transition: text-shadow 0.5s ease;
 }
 
 a:hover, a:focus {text-decoration: underline;}
@@ -125,18 +172,19 @@ pre, code {
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
-
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 
 pre {
+  width: 100%;
   padding: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,.1);
   overflow: auto;
 }
 
 code {
   padding: 3px;
   margin: 0 3px;
+  box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 
 pre code {
@@ -146,14 +194,23 @@ pre code {
 
 blockquote {
   color: #666;
-  margin: 0 0 20px 2px;
-  padding-left: 20px;
+  margin-bottom: 20px;
+  padding: 0 0 0 20px;
   border-left: 3px solid #bbb;
-  font-style: italic;
 }
 
+
 ul, ol, dl {
-  margin: 0 0 15px 0;
+  margin-bottom: 15px
+}
+
+ul {
+  list-style: inside;
+  padding-left: 20px;
+}
+
+ol {
+  list-style: decimal inside;
   padding-left: 20px;
 }
 
@@ -162,8 +219,7 @@ dl dt {
 }
 
 dl dd {
-  margin-left: 0;
-  padding-left: 0;
+  padding-left: 20px;
   font-style: italic;
 }
 
@@ -234,6 +290,11 @@ Full-Width Styles
 
 #header_wrap {
   background: #212121;
+  background: -moz-linear-gradient(top, #373737, #212121);
+  background: -webkit-linear-gradient(top, #373737, #212121);
+  background: -ms-linear-gradient(top, #373737, #212121);
+  background: -o-linear-gradient(top, #373737, #212121);
+  background: linear-gradient(top, #373737, #212121);
 }
 
 #header_wrap .inner {
@@ -309,6 +370,8 @@ Full-Width Styles
   background: #212121;
 }
 
+
+
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
@@ -360,4 +423,5 @@ Small Device Styles
     max-width: 480px;
     font-size: 11px;
   }
+
 }
