--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,2 +1,3 @@
-<a href="{{ site.baseurl }}/about/">关于</a>
-<a href="{{ site.baseurl }}/contact/">联系</a>
+<a href="{{ site.baseurl }}/about/">About</a>
+<a href="{{ site.baseurl }}/works/">Works</a>
+<!-- <a href="{{ site.baseurl }}/contact/">联系</a> -->
