--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-         &copy; 2015 ggiiss@qq.com.<br />
-         Powered By <a href="https://github.com/johnotander/pixyll">Github</a>.
+         &copy;2015 杨军军<br />
+         Powered By <a href="https://github.com/johnotander/pixyll">Pixyll</a>.
       </small>
     </div>
   </div>
