--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -3,19 +3,19 @@
   <div class="left">
     {% if paginator.previous_page %}
       {% if paginator.page == 2 %}
-        <a class="pagination-item" href="{{ site.baseurl }}/">上一页</a>
+        <a class="pagination-item" href="{{ site.baseurl }}/">&laquo; Prev</a>
       {% else %}
-        <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.previous_page}}/">上一页</a>
+        <a class="pagination-item" href="{{ paginator.previous_page_path }}/">&laquo; Prev</a>
       {% endif %}
     {% else %}
-      <span class="pagination-item disabled">上一页</span>
+      <span class="pagination-item disabled">&laquo; Prev</span>
     {% endif %}
   </div>
   
   <div class="right">
     {% if paginator.next_page %}
-      <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.next_page}}/">下一页</a>
+      <a class="pagination-item" href="{{paginator.next_page_path}}/">Next &raquo;</a>
     {% else %}
-      <span class="pagination-item disabled">下一页</span>
+      <span class="pagination-item disabled">Next &raquo;</span>
   </div>
 </div>
