--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,19 +2,19 @@
   <div class="left">
     {% if paginator.previous_page %}
       {% if paginator.page == 2 %}
-        <a class="pagination-item" href="{{ site.baseurl }}/">上一页</a>
+        <a class="pagination-item" href="{{ site.baseurl }}/">Prev</a>
       {% else %}
-        <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.previous_page}}/">上一页</a>
+        <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.previous_page}}/">Prev</a>
       {% endif %}
     {% else %}
-      <span class="pagination-item disabled">上一页</span>
+      <span class="pagination-item disabled">Prev</span>
     {% endif %}
   </div>
   <div class="right">
     {% if paginator.next_page %}
-      <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.next_page}}/">下一页</a>
+      <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.next_page}}/">Next</a>
     {% else %}
-      <span class="pagination-item disabled">下一页</span>
+      <span class="pagination-item disabled">Next</span>
     {% endif %}
   </div>
 </div>
