--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
         {% include navigation.html %}
       </nav>
       <div class="clearfix"></div>
-      {% if site.show_social_icons %}
-        {% include social_links.html %}
-      {% endif %}
     </div>
   </div>
+  <a href="http://github.com/xngiser">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://yangjunjun.github.io/images/forkme.png">
+  </a>
 </header>
