add a-guide-to-liquid post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,9 @@
       <div class="clearfix"></div>
     </div>
   </div>
-  <a href="http://github.com/xngiser">
-    <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://yangjunjun.github.io/images/forkme.png">
+  <!-- module fork-me-in-github Start -->
+  <a href="http://github.com/yangjunjun" >
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://yangjunjun.github.io/images/forkme.png" alt="Fork me on Github">
   </a>
+  <!-- module fork-me-in-github End -->
 </header>
