--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -220,7 +220,8 @@ pre {
   padding: 1.125em;
   font-size: 1.125rem;
   line-height: 1.11;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
+  overflow-x: auto;
   margin-bottom: 0.88em;
 }
 
