--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -231,7 +231,8 @@ pre {
 }
 
 blockquote {
-  padding: 1.33em;
+  /*  padding: 1.33em; */
+  padding: 0.2rem 0.4rem;
   font-style: italic;
   border-left: 5px solid #7a7a7a;
 }
