增加腾讯统计

--- a/_includes/baidu_analyze.html
+++ b/_includes/baidu_analyze.html
@@ -9,5 +9,5 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=52470168" charset="UTF-8"></script>
 {% endif %}
